--- a/main.html
+++ b/main.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-
 <html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+	<head>
+		<link rel="stylesheet" href="styles.css">
+	</head>
+	<body>
+		<nav>
+			<ul> 
+				<li><a href="a">Home</a></li>
+				<li><a href="b">About us</a></li>
+				<li><a href="c">Contact us</a></li>
+			</ul>
+		</nav>
+		<h3>3 random images</h3>
+		<img src="https://picsum.photos/id/123/200/300" alt="Random image">
+		<img src="https://picsum.photos/id/124/200/300" alt="Random image">
+		<img src="https://picsum.photos/id/125/200/300" alt="Random image">
+		<!-- the entire body must be written by student -->
+	    <script type="text/javascript" src="./script.js">
+		</script>
+	</body>
 </html>
